--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -233,6 +233,14 @@
       {% if entry.blog %}
         <a href="{{ entry.blog }}" class="btn btn-sm z-depth-0" role="button">Blog</a>
       {% endif %}
+
+      {% if entry.press_jp %}
+        <a href="{{ entry.press_jp }}" class="btn btn-sm z-depth-0" role="button" style="color: blue;">Japanese press release</a>
+      {% endif %}
+      {% if entry.highlight %}
+        <a href="{{ entry.highlight }}" class="btn btn-sm z-depth-0" role="button" style="color: blue;">Research Highlight</a>
+      {% endif %}      
+
       {% if entry.code %}
         <a href="{{ entry.code }}" class="btn btn-sm z-depth-0" role="button">Code</a>
       {% endif %}
